# urdf_to_opw_kinematics

./: .gitignore  package.xml  setup.cfg  setup.py
urdf_to_opw_kinematics/: example.py  get_yaml_from_urdf.py  main.py  util.py
