<?xml version="1.0" encoding="UTF-8"?>
<package format="2">
    <name>urdf_to_opw_kinematics</name>
    <version>0.0.0</version>
    <description>The urdf_to_opw_kinematics package</description>
    <maintainer email="jeroen@todo.todo">jeroen</maintainer>
    <license>TODO</license>
    <depend>urdf_parser_py</depend>
    <depend>python-numpy</depend>
    <depend>python3-scipy</depend>
    <test_depend>ament_copyright</test_depend>
    <test_depend>ament_flake8</test_depend>
    <test_depend>ament_pep257</test_depend>
    <test_depend>python3-pytest</test_depend>
    <export>
        <build_type>ament_python</build_type>
    </export>
</package>
